<?xml version="1.0" encoding="utf-8"?>

<!-- shoe detail fragment is add shoe item page -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="shoedetailViewModel"
            type="com.udacity.shoestore.shoeDetail.ShoeDetailViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="103dp"
            android:text="name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="41dp"
            android:text="size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="34dp"
            android:text="company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="42dp"
            android:text="description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="38dp"
            android:text="images"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <EditText
            android:id="@+id/editTextTextName"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="87dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/name"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextSize"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/shoe_size"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextName" />

        <EditText
            android:id="@+id/editTextTextCompany"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/company"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextSize" />

        <EditText
            android:id="@+id/editTextTextDescription"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/description"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextCompany" />

        <EditText
            android:id="@+id/editTextImages"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="12dp"
            android:hint="@string/images"
            android:inputType="text"
            android:ems="10"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextDescription" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="182dp"
            android:text="@string/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="124dp"
            android:layout_marginTop="154dp"
            android:text="@string/save"
            app:layout_constraintStart_toEndOf="@+id/cancelBtn"
            app:layout_constraintTop_toBottomOf="@+id/editTextImages" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
